welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:5: error: not found: type i
    if (nums[i]==lookingFor){
             ^indexOfValue:5: error: value nums of type Array[Int] does not take type parameters.
    if (nums[i]==lookingFor){
            ^indexOfValue:4: error: type mismatch;
 found   : Unit
 required: Int
  while(i<nums.length -1){
  ^