welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var i=0
  
  while(i<nums.length -1){
    if (nums[i]==lookingFor){
      return i
      i-i+1
    }else{
      i=i+1
    }
  	
  }
}